--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "@websanova/vue-auth": "^2.21.14-beta",
         "ajv": "^6.11.0",
         "bootstrap-icons": "^1.0.0-alpha2",
+        "chart.js": "^2.9.3",
         "es6-promise": "^4.2.8",
         "node-sass": "^4.13.1",
         "vue-axios": "^2.1.5",
+        "vue-chartjs": "^3.5.0",
         "vue-moment": "^4.1.0",
         "vue-router": "^3.1.5",
         "vue-sweetalert2": "^2.1.5",
