--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   "require": {
     "php": ">=7.0.0",
     "fideloper/proxy": "~3.3",
+    "fruitcake/laravel-cors": "^1.0",
     "laravel/framework": "5.5.*",
     "laravel/tinker": "~1.0",
     "maatwebsite/excel": "^3.1",
