--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "vue-moment": "^4.1.0",
         "vue-router": "^3.1.5",
         "vue-sweetalert2": "^2.1.5",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.11",
+        "vuex": "^3.1.3"
     }
 }
