--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ app/storage/
 # Laravel 5 & Lumen specific
 public/storage
 public/hot
+public/uploads
+public/js
+public/css
 
 # Laravel 5 & Lumen specific with changed public path
 public_html/storage
@@ -24,6 +27,3 @@ Homestead.json
 
 # Custom
 *.swp
-public/uploads/*
-public/js/
-public/css/
