update .gitignore again

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,9 @@ app/storage/
 # Laravel 5 & Lumen specific
 public/storage
 public/hot
-public/uploads/*
-public/js/*
-public/css/*
+public/uploads/
+public/js/
+public/css/
 
 # Laravel 5 & Lumen specific with changed public path
 public_html/storage
